external-crates/move/crates/move-compiler/tests/move_check/expansion/number_literal_too_long.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long.move:3:9
  │
3 │         0x1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. This literal does not fit into the type 'u256' (the largest possible integer type)

error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long.move:4:9
  │
4 │         340282366920938463463374607431768211456340282366920938463463374607431768211456340282366920938463463374607431768211456;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. This literal does not fit into the type 'u256' (the largest possible integer type)
